# deploy-project

./: main.py  pyproject.toml  setup.py
src/test_deploy_project.egg-info/: PKG-INFO
