[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "example_package_mark_dot"
version = "0.0.2"
authors = [
  { name="Mark", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Markelii/deploy-project"
"Bug Tracker" = "https://github.com/Markelii/deploy-project/issues"